--- a/src/components/NotFound/notFound.css
+++ b/src/components/NotFound/notFound.css
@@ -28,12 +28,14 @@
     text-align: center;
     text-decoration: none;
     color: var(--blue);
+    background-color: var(--dark-gray);
     font-family: var(--main-font);
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     cursor: pointer;
+    border: none;
 }
 
 .not-found__button:hover {
